<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:gravity="center"
            android:textSize="22sp"
            android:id="@+id/etID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/usuariomen"
            android:hint="@string/textCorreoElectronico" />

        <EditText
            android:gravity="center"
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/llave"
            android:hint="@string/textContraseña"
            android:textSize="22sp" />

        <Button
            android:textStyle="bold"
            android:textColor="#f6978e8e"
            android:background="@drawable/buttonlogin"
            android:layout_margin="5dp"
            android:id="@+id/btnLogin"
            android:text="@string/textInicioSesion"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:textStyle="bold"
            android:textColor="#fcfafa"
            android:background="@drawable/buttonregister"
            android:layout_margin="5dp"
            android:id="@+id/btnCrearCuenta"
            android:text="@string/textCrearCuenta"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:autoLink="all"
                android:clickable="true"
                android:linksClickable="true"
                android:text="@string/textNoTieneCuenta"
                android:textSize="20sp"
                app:fontFamily="@font/roboto" />

            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                app:fontFamily="@font/roboto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="Registrarse"
                android:textSize="20sp" />
        </LinearLayout>



    </LinearLayout>

</LinearLayout>